Minor tutorial spacing fixes

--- a/css/style.css
+++ b/css/style.css
@@ -925,8 +925,8 @@ h2 { margin-bottom: 0; margin-top: 0;}
 	font-style			: normal;
 }*/
 
-<!--------------------TUTORIAL HEADER SPACING------------------>
-.Tutorials h1 { line-height: 0.5em; } 
+/*--------------------TUTORIAL HEADER SPACING------------------*/
+.Tutorials { line-height: 0em; } 
 
 #Tutorials h2.with-nav { margin-bottom: 0; }
 #Tutorials .onecol { clear: both; }
